<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="20dp">

    <TextView
        android:id="@+id/dialog_confirmation_message_box"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dialog_confirmation_message"
        android:textAppearance="?android:attr/textAppearanceLarge"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/dialog_confirm_yes"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginRight="10dp"
        android:text="@string/Yes"
        app:layout_constraintEnd_toStartOf="@id/dialog_confirm_no"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/dialog_confirmation_message_box" />

    <Button
        android:id="@+id/dialog_confirm_no"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/dialog_confirm_yes"
        app:layout_constraintTop_toBottomOf="@id/dialog_confirmation_message_box"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="10dp"
        android:text="@string/No" />

</androidx.constraintlayout.widget.ConstraintLayout>